--- a/index.html
+++ b/index.html
@@ -5,13 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio Web</title>
+    <style>
+        body{
+            background-color: #aaa;
+        }
+        #nome{
+            font-family: 'Times New Roman', Times, serif;
+        }
+        #desc{
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        .hab1{
+            font-size: 1.5em;
+        }
+    </style>
 </head>
 <body>
     <h2 id="nome">Rogério Franco Correia</h2>
     <img src="IMG_RogerJPG.JPG" alt="Minha imagem" id="imagem"></a>
-    <p id="desc">Olá, eu sou brasileiro e atualmente resido no estado do Mato Grosso do Sul, e também eventualmente em São Paulo. Tenho 40 anos e tenho uma formação em direito e outra em jornalismo inconclusas, que tive que paralisar em virtude de um empreendimento em que iniciei e tive o privilégio de liderar uma equipe de aproximadamente 40 colaboradores. Sou comissário de bordo e atuaei por mais de 8 anos na aviação, sendo estes anos na companhia aérea Gol. Atualmente estou me formando na carreira de desenvolvedor.</p>
+    <p id="desc">Olá, eu sou <strong>brasileiro</strong> e atualmente resido no estado do <em>Mato Grosso do Sul</em>, e também eventualmente em <em>São Paulo</em>. Tenho 40 anos e tenho uma formação em direito e outra em jornalismo inconclusas, que tive que paralisar em virtude de um empreendimento em que iniciei e tive o privilégio de liderar uma equipe de aproximadamente 40 colaboradores. Sou comissário de bordo e atuaei por mais de 8 anos na aviação, sendo estes anos na companhia aérea Gol. Atualmente estou me formando na carreira de desenvolvedor.</p>
     <h4 id="hab">Lista de habilidades:</h4>
-    <ul>
+    <ul class="hab1">
         <li><strong>Resiliência</strong></li>
         <li>Liderança</li>
         <li>Gestão</li>
