centralizei o texto e retirei os pontos da lista

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <style>
         body{
             background-color: #aaa;
+            align-items: center;
+            text-align: center;
         }
         #nome{
             font-family: 'Times New Roman', Times, serif;
@@ -17,6 +19,7 @@
         }
         .hab1{
             font-size: 1.5em;
+            list-style-type: none;
         }
     </style>
 </head>
