--- a/index.html
+++ b/index.html
@@ -5,46 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio Web</title>
+    <link rel="stylesheet" href="style.css">
     <style>
-        body{
-            background-color: #aaa;
-            align-items: center;
-            text-align: center;
-        }
-        #nome{
-            font-family: 'Times New Roman', Times, serif;
-        }
-        #desc{
-            font-family: Arial, Helvetica, sans-serif;
-        }
-        .hab1{
-            font-size: 1.5em;
-            list-style-type: none;
-        }
+
     </style>
 </head>
 <body>
-    <h2 id="nome">Rogério Franco Correia</h2>
-    <img src="IMG_RogerJPG.JPG" alt="Minha imagem" id="imagem"></a>
-    <p id="desc">Olá, eu sou <strong>brasileiro</strong> e atualmente resido no estado do <em>Mato Grosso do Sul</em>, e também eventualmente em <em>São Paulo</em>. Tenho 40 anos e tenho uma formação em direito e outra em jornalismo inconclusas, que tive que paralisar em virtude de um empreendimento em que iniciei e tive o privilégio de liderar uma equipe de aproximadamente 40 colaboradores. Também fui comissário de bordo e atuaei por mais de 8 anos na aviação, sendo estes anos na companhia aérea Gol. Atualmente estou me formando na carreira de desenvolvedor. hjdhfheufheuhfeuwhewif</p>
-    <h4 id="hab">Lista de habilidades:</h4>
-    <ul class="hab1">
-        <li><strong>Resiliência</strong></li>
-        <li>Liderança</li>
-        <li>Gestão</li>
-        <li>Organização</li>
-        <li><em>Persuasão</em></li>
-        <li>Compreensão</li>
-        <li>Empatia</li>
-    </ul>
-    <a href="https://www.mises.org.br/Default.aspx" target="_blanck">Site que recomendo</a>
-    <br>
-    <br>
-    <br>
-    <a href="#nome">Nome</a>
-    <a href="#imagem">Imagem</a>
-    <a href="#desc">Descrição</a>
-    <a href="#hab">Habilidades</a>
-    <a href="#blog">Blog</a>
+    <div  class="lado">
+        <div class="name">
+            <h2 id="nome">Rogério Franco Correia</h2>
+        </div>
+        <div class="inline">
+            <img src="IMG_RogerJPG.JPG" alt="Minha imagem" id="imagem"></a>
+        </div>
+        <div class="inline desc-sub">
+            <p id="desc">Olá, eu sou <strong>brasileiro</strong> e atualmente resido no estado do <em>Mato Grosso do Sul</em>, e também eventualmente em <em>São Paulo</em>. Tenho 40 anos e tenho uma formação em direito e outra em jornalismo inconclusas, que tive que paralisar em virtude de um empreendimento em que iniciei e tive o privilégio de liderar uma equipe de aproximadamente 40 colaboradores. Também fui comissário de bordo e atuaei por mais de 8 anos na aviação, sendo estes anos na companhia aérea Gol. Atualmente estou me formando na carreira de desenvolvedor.</p>
+        </div>
+    </div>
+    <div class="hab-foot">
+        <h4 id="hab">Lista de habilidades:</h4>
+        <ul class="hab1">
+            <li><strong>Resiliência</strong></li>
+            <li>Liderança</li>
+            <li>Gestão</li>
+            <li>Organização</li>
+            <li><em>Persuasão</em></li>
+            <li>Compreensão</li>
+            <li>Empatia</li>
+        </ul>
+        <a href="https://www.mises.org.br/Default.aspx" target="_blanck">Site que recomendo</a>
+        <br>
+        <br>
+        <br>
+        <a href="#nome">Nome</a>
+        <a href="#imagem">Imagem</a>
+        <a href="#desc">Descrição</a>
+        <a href="#hab">Habilidades</a>
+        <a href="#blog">Blog</a>
+    </div>
 </body>
 </html>
