--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <img src="IMG_RogerJPG.JPG" alt="Minha imagem" id="imagem"></a>
         </div> 
         <div class="imgp">     
-            <p id="desc">Olá, eu sou brasileiro e atualmente resido no estado do Mato Grosso do Sul, e também eventualmente em São Paulo. Tenho 40 anos e tenho uma formação em direito e outra em jornalismo inconclusas, que tive que paralisar em virtude de um empreendimento em que iniciei e tive o privilégio de liderar uma equipe de aproximadamente 40 colaboradores. Sou comissário de bordo e atuaei por mais de 8 anos na aviação, sendo estes anos na companhia aérea Gol. Atualmente estou me formando na carreira de desenvolvedor.</p>
+            <p id="desc">Olá, eu sou brasileiro e atualmente resido no estado do Mato Grosso do Sul, e também eventualmente em São Paulo, capital. A minha idade é de 40 anos e sou desenvolverdor web. Tenho uma formação em direito e outra em jornalismo inconclusas, que paralisei em virtude de empreendimentos em que iniciei e tive o privilégio de liderar uma equipe de aproximadamente 40 colaboradores. Trabalhei na aviação como comissário de bordo e chefe de cabine, onde atuei por mais de 8 anos, sendo estes anos na companhia aérea Gol.</p>
         </div> 
     </div>
     <h4 id="hab">Lista de habilidades:</h4>
